# ERC

./: Dockerfile
leo_nodes/: package.xml  setup.py
leo_nodes/leo_nodes/: aruco.py  aruco1.py  aruco2.py  controller.py  goal_setter_node.py  ground_truth_filter.py  navigation_control.py  odom_compat_node.py  odom_offset_node.py  pcl.py  pdu_node.py  zed2_imu_transform_publisher.py
leo_nodes/leo_nodes/install/: local_setup.sh  setup.sh
leo_nodes/leo_nodes/log/: latest_build
leo_rover/: CMakeLists.txt  package.xml
leo_rover/config/: model.config  nav.rviz
leo_rover/launch/: MarsYard.launch.xml  calibration.launch.py  check.launch.xml  empty.launch.xml  mars.launch.xml  new.launch.xml  temp.launch.xml  xmlTest.launch.xml
leo_rover/maps/: map.pgm  map.yaml
leo_rover/models/marsyard2022_terrain/: model.sdf
leo_rover/params/: mapper_params_online_async.yaml  nav2_params.yaml  testNav2Params.yaml  zed2_left_camera_calibration.yaml
leo_rover/urdf/: leo_erc.xacro  leo_erc_sim.urdf  leo_erc_sim.urdf.xacro  leo_with_lidar.urdf  probe.urdf  rover.gazebo  rover.urdf  rover.xacro
leo_rover/worlds/: marsyard2020.world  marsyard2021.world  marsyard2022.world
leo_worlds/: package.xml  setup.py
leo_worlds/models/marsyard2022_terrain/: model.sdf
leo_worlds/worlds/: marsyard2022.world  marsyard2022.world.xacro
ros2_ws/src/leo_nodes/: setup.py
ros2_ws/src/leo_nodes/leo_nodes/: aruco.py  ground_truth_filter.py  odom_offset_node.py
ros2_ws/src/leo_rover/: CMakeLists.txt  package.xml
ros2_ws/src/leo_rover/config/: nav.rviz
ros2_ws/src/leo_rover/launch/: MarsYard.launch.xml
ros2_ws/src/leo_rover/models/marsyard2022_terrain/: model.sdf
ros2_ws/src/leo_rover/src/: odom_offset_node.cpp
ros2_ws/src/leo_rover/urdf/: leo_erc_sim.urdf  probe.urdf
ros2_ws/src/leo_rover/worlds/: marsyard2022.world
