<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_rover</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dillon.mitmpl2022@learner.manipal.edu">dillon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>urdf</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  

  <export>
    <build_type>ament_cmake</build_type>
    <urdf/>
  </export>
</package>
